--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/john1/git/SE2-5/lib/eclipselink.jar"/>
-	<classpathentry kind="lib" path="C:/Users/john1/git/SE2-5/lib/javax.persistence_2.1.1.v201509150925.jar"/>
-	<classpathentry kind="lib" path="C:/Users/john1/git/SE2-5/lib/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="lib/eclipselink.jar"/>
+	<classpathentry kind="lib" path="lib/javax.persistence_2.1.1.v201509150925.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.39-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
